# rust-beginner-apps

./: .gitignore  Cargo.toml  README.md
echo-server/: Cargo.toml
echo-server/src/: README.md  main.rs
key-value-store/: Cargo.toml  README.md
key-value-store/src/: README.md  main.rs
key-value-store/src/application/: errors.rs  handlers.rs
key-value-store/src/domain/: engine.rs  errors.rs  mod.rs
raw-socket-echo/: Cargo.toml  README.md
raw-socket-echo/src/: main.rs
todo-list/: Cargo.toml  README.md
todo-list/src/: main.rs
todo-list/src/domain/: entities.rs
todo-list/src/repository/: csv_repo.rs  errors.rs  mod.rs  traits.rs
todo-list/src/services/: errors.rs  service.rs
