[package]
name = "key-value-store"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
